<resources>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="color_presets">Color Presets</string>
    <string name="effects">Effects</string>
    <string name="color_picker">Color Picker</string>
    <string name="rainbow">Rainbow</string>
    <string name="random">Random</string>
    <string name="strobe_with_music">Strobe with music</string>
    <string name="change_color_and_strobe_with_music">Change color and strobe with music</string>
    <string name="placeholder">placeholder</string>
    <string name="strobe_and_change_color">Strobe and change color</string>
    <string name="strobe">Strobe</string>
    <string name="change_color_randomly">Change color randomly</string>
    <string name="change_color_with_music">Change color with music</string>
    <string name="lights_1_30">Lights 1 - 30</string>
    <string name="lights_31_60">Lights 31 - 60</string>
    <string name="lights_61_90">Lights 61 - 90</string>
    <string name="lights_91_120">Lights 91 - 120</string>
    <string name="lights_121_150">Lights 121 - 150</string>
    <string name="lights_151_180">Lights 151 - 180</string>
    <string name="lights_181_210">Lights 181 - 210</string>
    <string name="lights_211_240">Lights 211 - 240</string>
    <string name="lights_241_270">Lights 241 - 270</string>
    <string name="lights_271_300">Lights 271 - 300</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_51">51</string>
    <string name="_52">52</string>
    <string name="_53">53</string>
    <string name="_54">54</string>
    <string name="_55">55</string>
    <string name="_56">56</string>
    <string name="_57">57</string>
    <string name="_58">58</string>
    <string name="_59">59</string>
    <string name="_60">60</string>
    <string name="_61">61</string>
    <string name="_62">62</string>
    <string name="_63">63</string>
    <string name="_64">64</string>
    <string name="_65">65</string>
    <string name="_66">66</string>
    <string name="_67">67</string>
    <string name="_68">68</string>
    <string name="_69">69</string>
    <string name="_70">70</string>
    <string name="_71">71</string>
    <string name="_72">72</string>
    <string name="_73">73</string>
    <string name="_74">74</string>
    <string name="_75">75</string>
    <string name="_76">76</string>
    <string name="_77">77</string>
    <string name="_78">78</string>
    <string name="_79">79</string>
    <string name="_80">80</string>
    <string name="_81">81</string>
    <string name="_82">82</string>
    <string name="_83">83</string>
    <string name="_84">84</string>
    <string name="_85">85</string>
    <string name="_86">86</string>
    <string name="_87">87</string>
    <string name="_88">88</string>
    <string name="_89">89</string>
    <string name="_90">90</string>
    <string name="_91">91</string>
    <string name="_92">92</string>
    <string name="_93">93</string>
    <string name="_94">94</string>
    <string name="_95">95</string>
    <string name="_96">96</string>
    <string name="_97">97</string>
    <string name="_98">98</string>
    <string name="_99">99</string>
    <string name="_100">100</string>
    <string name="_101">101</string>
    <string name="_102">102</string>
    <string name="_103">103</string>
    <string name="_104">104</string>
    <string name="_105">105</string>
    <string name="_106">106</string>
    <string name="_107">107</string>
    <string name="_108">108</string>
    <string name="_109">109</string>
    <string name="_110">110</string>
    <string name="_111">111</string>
    <string name="_112">112</string>
    <string name="_113">113</string>
    <string name="_114">114</string>
    <string name="_115">115</string>
    <string name="_116">116</string>
    <string name="_117">117</string>
    <string name="_118">118</string>
    <string name="_119">119</string>
    <string name="_120">120</string>
    <string name="_121">121</string>
    <string name="_122">122</string>
    <string name="_123">123</string>
    <string name="_124">124</string>
    <string name="_125">125</string>
    <string name="_126">126</string>
    <string name="_127">127</string>
    <string name="_128">128</string>
    <string name="_129">129</string>
    <string name="_130">130</string>
    <string name="_131">131</string>
    <string name="_132">132</string>
    <string name="_133">133</string>
    <string name="_134">134</string>
    <string name="_135">135</string>
    <string name="_136">136</string>
    <string name="_137">137</string>
    <string name="_138">138</string>
    <string name="_139">139</string>
    <string name="_140">140</string>
    <string name="_141">141</string>
    <string name="_142">142</string>
    <string name="_143">143</string>
    <string name="_144">144</string>
    <string name="_145">145</string>
    <string name="_146">146</string>
    <string name="_147">147</string>
    <string name="_148">148</string>
    <string name="_149">149</string>
    <string name="_150">150</string>
    <string name="_151">151</string>
    <string name="_152">152</string>
    <string name="_153">153</string>
    <string name="_154">154</string>
    <string name="_155">155</string>
    <string name="_156">156</string>
    <string name="_157">157</string>
    <string name="_158">158</string>
    <string name="_159">159</string>
    <string name="_160">160</string>
    <string name="_161">161</string>
    <string name="_162">162</string>
    <string name="_163">163</string>
    <string name="_164">164</string>
    <string name="_165">165</string>
    <string name="_166">166</string>
    <string name="_167">167</string>
    <string name="_168">168</string>
    <string name="_169">169</string>
    <string name="_170">170</string>
    <string name="_171">171</string>
    <string name="_172">172</string>
    <string name="_173">173</string>
    <string name="_174">174</string>
    <string name="_175">175</string>
    <string name="_176">176</string>
    <string name="_177">177</string>
    <string name="_178">178</string>
    <string name="_179">179</string>
    <string name="_180">180</string>
    <string name="_181">181</string>
    <string name="_182">182</string>
    <string name="_183">183</string>
    <string name="_184">184</string>
    <string name="_185">185</string>
    <string name="_186">186</string>
    <string name="_187">187</string>
    <string name="_188">188</string>
    <string name="_189">189</string>
    <string name="_190">190</string>
    <string name="_191">191</string>
    <string name="_192">192</string>
    <string name="_193">193</string>
    <string name="_194">194</string>
    <string name="_195">195</string>
    <string name="_196">196</string>
    <string name="_197">197</string>
    <string name="_198">198</string>
    <string name="_199">199</string>
    <string name="_200">200</string>
    <string name="_201">201</string>
    <string name="_202">202</string>
    <string name="_203">203</string>
    <string name="_204">204</string>
    <string name="_205">205</string>
    <string name="_206">206</string>
    <string name="_207">207</string>
    <string name="_208">208</string>
    <string name="_209">209</string>
    <string name="_210">210</string>
    <string name="_211">211</string>
    <string name="_212">212</string>
    <string name="_213">213</string>
    <string name="_214">214</string>
    <string name="_215">215</string>
    <string name="_216">216</string>
    <string name="_217">217</string>
    <string name="_218">218</string>
    <string name="_219">219</string>
    <string name="_220">220</string>
    <string name="_221">221</string>
    <string name="_222">222</string>
    <string name="_223">223</string>
    <string name="_224">224</string>
    <string name="_225">225</string>
    <string name="_226">226</string>
    <string name="_227">227</string>
    <string name="_228">228</string>
    <string name="_229">229</string>
    <string name="_230">230</string>
    <string name="_231">231</string>
    <string name="_232">232</string>
    <string name="_233">233</string>
    <string name="_234">234</string>
    <string name="_235">235</string>
    <string name="_236">236</string>
    <string name="_237">237</string>
    <string name="_238">238</string>
    <string name="_239">239</string>
    <string name="_240">240</string>
    <string name="_241">241</string>
    <string name="_242">242</string>
    <string name="_243">243</string>
    <string name="_244">244</string>
    <string name="_245">245</string>
    <string name="_246">246</string>
    <string name="_247">247</string>
    <string name="_248">248</string>
    <string name="_249">249</string>
    <string name="_250">250</string>
    <string name="_251">251</string>
    <string name="_252">252</string>
    <string name="_253">253</string>
    <string name="_254">254</string>
    <string name="_255">255</string>
    <string name="_256">256</string>
    <string name="_257">257</string>
    <string name="_258">258</string>
    <string name="_259">259</string>
    <string name="_260">260</string>
    <string name="_261">261</string>
    <string name="_262">262</string>
    <string name="_263">263</string>
    <string name="_264">264</string>
    <string name="_265">265</string>
    <string name="_266">266</string>
    <string name="_267">267</string>
    <string name="_268">268</string>
    <string name="_269">269</string>
    <string name="_270">270</string>
    <string name="_271">271</string>
    <string name="_272">272</string>
    <string name="_273">273</string>
    <string name="_274">274</string>
    <string name="_275">275</string>
    <string name="_276">276</string>
    <string name="_277">277</string>
    <string name="_278">278</string>
    <string name="_279">279</string>
    <string name="_280">280</string>
    <string name="_281">281</string>
    <string name="_282">282</string>
    <string name="_283">283</string>
    <string name="_284">284</string>
    <string name="_285">285</string>
    <string name="_286">286</string>
    <string name="_287">287</string>
    <string name="_288">288</string>
    <string name="_289">289</string>
    <string name="save">save</string>
</resources>